# read-flow

./: .gitattributes  .gitignore  .rustfmt.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN-PDF-VIEWER.md  FEATURES.toml  FEATURE_MATRIX.md  LICENSE-MIT  NOTICE  README.md  README.org  RELEASING.md  REQUIREMENTS.org  Rocket.toml  SECURITY.md  TODO.org  archive-organizer.template.toml  deny.toml  diesel.toml  justfile  openapi.yaml  read-flow.template.toml  read-flow.toml.bak  rest-api.http  setup.sh
archive_organizer/: Cargo.toml
archive_organizer/migrations/2024-09-25-070820_initial_database/: down.sql
archive_organizer/migrations/2025-02-23-074437_mark_files_read/: down.sql
archive_organizer/migrations/2025-04-24-174917_create_users_and_api_keys/: down.sql  up.sql
archive_organizer/src/: api.rs  client.rs  lib.rs  settings.rs
archive_organizer/src/auth/: jwt.rs  mod.rs  models.rs  service.rs
archive_organizer/src/db/: dao.rs  datasource.rs  mod.rs  models.rs  schema.rs
archive_organizer/src/gui/: welcome_page.rs
archive_organizer/src/gui/files_page/: dialog_edit_file.rs  mod.rs  page.rs
archive_organizer/src/scan/: file_system_visitor.rs  mod.rs
archive_organizer/src/scan/modules/: file_extension_finder.rs  scm_project_finder.rs
archive_organizer/src/server/: auth.rs  authn.rs  mod.rs
archive_organizer/src/tag/: mod.rs
core/: Cargo.toml  rest-api.http
core/migrations/: 20240925070820_initial_database.sql  20241026172239_create_remotes.sql  20250223074437_mark_files_read.sql  20251116185233_order_remotes.sql  20260111154734_add_authorization_token_to_remotes.sql  20260111210020_add_user_id_and_rename_auth_token.sql  20260215120000_add_reading_progress.sql  20260520120000_add_document_metadata.sql  20260520130000_migrate_content_metadata_to_documents.sql  20260527000000_reading_state.sql  20260528000000_covers.sql  20260529000000_selected_cover.sql  20260530000000_clear_covers.sql  20260703065120_add_archive_columns.sql  20260719090000_add_imported_at_to_files.sql
core/migrations/2024-09-25-070820_initial_database/: up.sql
core/migrations/2024-10-26-172239_create_remotes/: down.sql
core/migrations/2025-11-16-185233-0000_order_remotes/: down.sql  up.sql
core/migrations/2026-01-11-154734_add_authorization_token_to_remotes/: down.sql  up.sql
core/migrations/2026-01-11-210020_add_user_id_and_rename_auth_token/: down.sql  up.sql
core/migrations/2026-02-15-120000_add_reading_progress/: down.sql
core/src/: api.rs  client.rs  lib.rs  settings.rs  test_support.rs
core/src/db/: dao.rs  datasource.rs  mod.rs  models.rs
core/src/online_library/: mod.rs
core/src/scan/: archive.rs  cover.rs  file_system_visitor.rs  metadata.rs  mod.rs  pipeline.rs  scanner.rs
core/src/server/: authn.rs  mod.rs  spa.rs  token.rs
core/src/tag/: mod.rs
core/tests/: config_loading.rs  feature_matrix.rs  oauth.rs  online_library.rs
cosmic/: Cargo.toml  README.md  justfile
cosmic/i18n/en/: archive_organizer_cosmic.ftl  read-flow.ftl  read_flow.ftl
cosmic/i18n/fr/: archive_organizer_cosmic.ftl  read-flow.ftl  read_flow.ftl
cosmic/i18n/nl/: archive_organizer_cosmic.ftl  read-flow.ftl  read_flow.ftl
cosmic/resources/: app.desktop  app.metainfo.xml  com.github.peterpaul.read-flow.desktop  com.github.peterpaul.read-flow.metainfo.xml  com.github.read-flow.read-flow.desktop  com.github.read-flow.read-flow.metainfo.xml  io.github.read-flow.desktop  io.github.read-flow.metainfo.xml  io.github.read-flow.read-flow.desktop  io.github.read-flow.read-flow.metainfo.xml
cosmic/snapshots/: .gitignore
cosmic/src/: aggregator.rs  app.rs  app_theme.rs  client.rs  config.rs  cosmic_ext.rs  document_provider.rs  fonts.rs  i18n.rs  iter.rs  layout.rs  logging.rs  main.rs  reading_progress.rs  render_blocks.rs  state.rs  subscription.rs
cosmic/src/bdd/: cosmic_driver.rs  driver.rs  fixtures.rs  mod.rs  rest_driver.rs  world.rs
cosmic/src/component/: check_missing.rs  confirm_dialog.rs  documents.rs  files.rs  mod.rs  pagination.rs  provided_state.rs  scan_progress.rs  section_helpers.rs  source_picker.rs  tag_editor.rs  tag_filter.rs  tag_pill_filter.rs
cosmic/src/forms/: mod.rs
cosmic/src/page/: app_settings.rs  dashboard.rs  document_details.rs  document_list.rs  epub_viewer.rs  file_details.rs  file_list.rs  files.rs  image_viewer.rs  mod.rs  mu_pdf_viewer.rs  online_library.rs  pdf_viewer.rs  preferences.rs  server_log.rs  settings.rs  sources.rs  traits.rs
cosmic/src/state/: files.rs  filtered.rs  mod.rs  tags.rs
docs/: authentication.md
epub/: Cargo.toml  README.md
epub/src/: error.rs  lib.rs
epub/src/content/: block.rs  mod.rs  parser.rs  resolve.rs  stylesheet.rs
epub/src/domain/: document.rs  locator.rs  metadata.rs  mod.rs  nav.rs  spine.rs
epub/src/epub/: container.rs  document.rs  mod.rs  nav.rs  package.rs
epub/src/renderer/: mod.rs  protocol.rs  traits.rs  types.rs
gtk/: Cargo.toml
gtk/assets/: style.css
gtk/src/: app.rs  auth_management.rs  duplicates_dialog.rs  duplicates_page.rs  file_box.rs  file_details.rs  file_details_section.rs  file_info_section.rs  file_list.rs  lib.rs  main.rs  settings_dialog.rs  status_radio_group.rs  tag_badge.rs  tag_input.rs  ui_utils.rs
iced_gui/: Cargo.toml
iced_gui/src/: lib.rs  main.rs  welcome_page.rs
iced_gui/src/files_page/: dialog_edit_file.rs  mod.rs  page.rs
provider/: Cargo.toml  README.org
provider/src/async/: and_then.rs  cache.rs  expiring_item_cache.rs  expiring_value.rs  fallback_provider.rs  map.rs  mapping_provider.rs  mod.rs  observable_cache.rs  observable_provider.rs  value.rs
provider/src/sync/: and_then.rs  broadcaster.rs  cache.rs  expiring_item_cache.rs  expiring_value.rs  fallback_provider.rs  map.rs  mod.rs  observable_cache.rs  observable_provider.rs  value.rs
settings/: Cargo.toml
settings/src/: app.rs  main.rs  save.rs  section.rs
settings/src/pages/: client.rs  database.rs  mod.rs  online_library.rs  scan.rs  server.rs  ui.rs
settings/src/widgets/: auto_tags.rs  dir_editor.rs  mod.rs  settings_section.rs  tag_chips.rs  user_editor.rs
(+258 files in other folders)
