[workspace]
members = [
    "core",
    "cosmic",
    "epub",
    "provider",
    "widgets",
]
resolver = "3"

[workspace.package]
version = "0.3.1"
edition = "2024"
rust-version = "1.96"

[workspace.dependencies]
anyhow = "1.0.104"
assert4rs = "0.3.1"
async-trait = "0.1.91"
base64 = "0.22.1"
clap = "4.6.2"
directories = "6"
cosmic-golden = { git = "https://github.com/peterpaul/cosmic-golden-test.git", tag = "0.6.0" }
cosmic-text = { git = "https://github.com/pop-os/cosmic-text.git" }
cucumber = "0.23"
derive_more = "2.1.1"
sha2 = "0.11"
sqlx = { version = "0.9.0", features = ["sqlite", "runtime-tokio", "macros"] }
figment = { version = "0.10.19", default-features = false }
futures = { version = "0.3.33", default-features = false, features = ["std", "async-await"] }
futures-util = "0.3.33"
html5ever = "0.39.0"
image = { version = "0.25", default-features = false }
i18n-embed = "0.16.0"
i18n-embed-fl = "0.10.0"
indexmap = "2.14.0"
itertools = "0.15.0"
libcosmic = { git = "https://github.com/pop-os/libcosmic.git" }
mime = "0.3.17"
argon2 = "0.6.0-rc.8"
jsonwebtoken = "10.4.0"
mupdf = "0.8.0"
open = "5.4.0"
pbkdf2 = "0.13.0"
quick-xml = "0.41.0"
rcgen = "0.14"
rand = { version = "0.10.2", default-features = false }
rustc-hash = "2"
regex = { version = "1.13.1", default-features = false }
reqwest = { version = "0.13.4", default-features = false }
rfd = "0.17.2"
axum = "0.8.9"
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
tower = "0.5.3"
tower-http = "0.7.0"
tower_governor = "0.8.0"
rstest = "0.26.1"
rust-embed = "8.12.0"
serde = "1.0.229"
serde_json = "1"
serde_with = "3.21.0"
strum = "0.28"
thiserror = "2.0.19"
time = { version = "0.3.53", default-features = false }
tokio = "1.53.0"
toml = "1.1.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", default-features = false }
trait-variant = "0.1.2"
url = "2.5.8"
uuid = { version = "1", features = ["v4"] }
webp = "0.3"
tar = "0.4"
flate2 = "1"
bzip2 = "0.6"
xz2 = "0.1"
zstd = "0.13"
tempfile = "3"
zip = { version = "8.6.0", default-features = false }

[profile.release]
# lto = true
