[package]
name = "read-flow-core"
version = "0.1.0"
edition = "2024"

authors = ["Peterpaul Klein Haneveld <pp.kleinhaneveld@gmail.com>"]
license = "MIT"

[package.metadata.deb]
maintainer = "Peterpaul Klein Haneveld <pp.kleinhaneveld@gmail.com>"

[features]
default = ["server"]
server = ["dep:rocket", "dep:rocket_cors"]
online_tests = []

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
clap = { workspace = true, features = ["derive"] }
sha2.workspace = true
sqlx = { workspace = true, features = ["migrate"] }
expanduser.workspace = true
# build libsqlite3 as part of the build process
# uncomment this line if you run into setup issues
# libsqlite3-sys = { workspace = true, features = ["bundled"] }
figment = { workspace = true, features = ["toml"] }
futures.workspace = true
indexmap = { workspace = true, features = ["serde"] }
itertools.workspace = true
mime.workspace = true
pbkdf2 = { workspace = true, features = ["simple"] }
rand_core = { workspace = true, features = ["getrandom"] }
rustc-hash.workspace = true
reqwest = { workspace = true, features = ["json", "stream", "multipart", "default-tls", "system-proxy"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
strum = { workspace = true, features = ["derive"] }
thiserror.workspace = true
toml.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "process", "fs", "io-util"] }
tracing-subscriber = { workspace = true, features = ["std", "env-filter", "fmt", "ansi"] }
tracing.workspace = true
url.workspace = true
uuid.workspace = true

quick-xml = { workspace = true }

epub.path = "../epub"
mupdf.workspace = true
provider.path = "../provider"

rocket = { workspace = true, optional = true, features = ["http2", "json"] }
rocket_cors = { workspace = true, optional = true }

[dev-dependencies]
assert4rs.workspace = true
rstest.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
