[package]
name = "read-flow-core"
version.workspace = true
edition = "2024"

authors = ["Peterpaul Klein Haneveld <pp.kleinhaneveld@gmail.com>"]
license = "MIT"

[package.metadata.deb]
maintainer = "Peterpaul Klein Haneveld <pp.kleinhaneveld@gmail.com>"

[features]
default = ["server"]
server = ["dep:axum", "dep:axum-server", "dep:tower", "dep:tower-http", "dep:tower_governor", "dep:jsonwebtoken", "dep:rcgen"]
# Embeds the built PWA (`pwa/build`) into the server binary and serves it at `/`.
# Requires the PWA to be built first (`just pwa-build`). Off by default so plain
# dev builds don't depend on a Node build.
embed-pwa = ["server", "dep:rust-embed"]
online_tests = []
# Exposes `test_support`: helpers for booting a real `read-flow-cli serve`
# process for BDD/integration tests outside this crate (e.g. `cosmic`'s
# cucumber-rs harness).
test-support = ["server"]

[dependencies]
anyhow.workspace = true
argon2.workspace = true
async-trait.workspace = true
base64.workspace = true
clap = { workspace = true, features = ["derive"] }
directories.workspace = true
open.workspace = true
sha2.workspace = true
sqlx = { workspace = true, features = ["migrate"] }
# build libsqlite3 as part of the build process
# uncomment this line if you run into setup issues
# libsqlite3-sys = { workspace = true, features = ["bundled"] }
figment = { workspace = true, features = ["toml"] }
futures.workspace = true
indexmap = { workspace = true, features = ["serde"] }
itertools.workspace = true
mime.workspace = true
pbkdf2 = { workspace = true, features = ["phc", "rand_core"] }
rand_core = { workspace = true, features = ["getrandom"] }
rustc-hash.workspace = true
reqwest = { workspace = true, features = ["json", "stream", "multipart", "default-tls", "system-proxy"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
strum = { workspace = true, features = ["derive"] }
thiserror.workspace = true
toml.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "process", "fs", "io-util"] }
tracing-subscriber = { workspace = true, features = ["std", "env-filter", "fmt", "ansi"] }
tracing.workspace = true
url.workspace = true
uuid.workspace = true

quick-xml = { workspace = true }

# Archive support: scan for documents inside zipfiles and tarballs.
zip = { workspace = true, features = ["deflate"] }
tar.workspace = true
flate2.workspace = true
bzip2.workspace = true
xz2.workspace = true
tempfile.workspace = true

epub.path = "../epub"
image = { workspace = true, features = ["jpeg", "png"] }
mupdf.workspace = true
webp.workspace = true
provider.path = "../provider"

axum = { workspace = true, optional = true, features = ["multipart"] }
axum-server = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true, features = ["cors", "trace", "set-header", "limit"] }
tower_governor = { workspace = true, optional = true }
jsonwebtoken = { workspace = true, optional = true }
rcgen = { workspace = true, optional = true }
rust-embed = { workspace = true, optional = true, features = ["mime-guess"] }
password-hash = "0.6.1"
mobi = "0.8.0"

[dev-dependencies]
assert4rs.workspace = true
axum = { workspace = true }
base64.workspace = true
rstest.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower = { workspace = true, features = ["util"] }
