[package]
name = "read-flow"
version = "0.1.0"
edition = "2024"
license = "GPL-2"
description = "Manage Documents Accross Multiple Machines"
repository = "http://raspberrypi:3000/peterpaul/read-flow.git"
# repository = "https://github.com/peterpaul/read-flow"

authors = ["Peterpaul Klein Haneveld <pp.kleinhaneveld@gmail.com>"]

[package.metadata.deb]
maintainer = "Peterpaul Klein Haneveld <pp.kleinhaneveld@gmail.com>"
assets = [
    { source = "target/release/read-flow", dest = "/usr/bin/read-flow", mode = "755" },
    { source = "resources/com.github.peterpaul.read-flow.desktop", dest = "/usr/share/applications/", mode = "644" },
    { source = "resources/com.github.peterpaul.read-flow.metainfo.xml", dest = "/usr/share/appdata/", mode = "644" },
    { source = "resources/icons/hicolor/scalable/apps/icon.svg", dest = "/usr/share/icons/hicolor/scalable/apps/com.github.peterpaul.read-flow.svg", mode = "644" },
]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
clap = { workspace = true, features = ["derive"] }
cosmic-text.workspace = true
derive_more = { workspace = true, features = ["as_ref", "deref", "from"] }
futures.workspace = true
futures-util.workspace = true
i18n-embed = { workspace = true, features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl.workspace = true
image = { workspace = true, features = ["png", "jpeg", "gif", "webp"] }
indexmap.workspace = true
mupdf = { workspace = true, features = ["sys-lib"] }
open.workspace = true
rand = { workspace = true, features = ["std", "sys_rng"] }
regex = { workspace = true, features = ["std", "unicode"] }
rfd.workspace = true
rust-embed.workspace = true
serde = { workspace = true, features = ["derive"] }
strum = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["std", "fmt"] }
url.workspace = true

epub = { path = "../epub" }
provider = { path = "../provider" }
read-flow-core = { path = "../core", default-features = false }
read-flow-widgets = { path = "../widgets" }

[dependencies.libcosmic]
workspace = true
# See https://github.com/pop-os/libcosmic/blob/master/Cargo.toml for available features.
features = [
    # Accessibility support
    "a11y",
    # About widget for the app
    "about",
    # Uses cosmic-settings-daemon to watch for config file changes
    "dbus-config",
    # Support creating additional application windows.
    "multi-window",
    # On app startup, focuses an existing instance if the app is already open
    "single-instance",
    # Uses tokio as the executor for the runtime
    "tokio",
    # Windowing support for X11, Windows, Mac, & Redox
    "winit",
    # Add Wayland support to winit
    "wayland",
    # GPU-accelerated rendering
    "wgpu",
]

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }

[dev-dependencies]
cosmic-golden.workspace = true
rstest.workspace = true
tempfile.workspace = true
zip.workspace = true
