[package]
name = "read-flow"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license = "AGPL-3.0-or-later"
description = "Manage Documents Accross Multiple Machines"
repository = "https://github.com/read-flow/read-flow"

authors = ["Peterpaul Klein Haneveld <pp.kleinhaneveld@gmail.com>"]

[package.metadata.deb]
maintainer = "Peterpaul Klein Haneveld <pp.kleinhaneveld@gmail.com>"
assets = [
    { source = "target/release/read-flow", dest = "/usr/bin/read-flow", mode = "755" },
    { source = "resources/io.github.read-flow.desktop", dest = "/usr/share/applications/", mode = "644" },
    { source = "resources/io.github.read-flow.metainfo.xml", dest = "/usr/share/appdata/", mode = "644" },
    { source = "resources/icons/hicolor/scalable/apps/icon.svg", dest = "/usr/share/icons/hicolor/scalable/apps/io.github.read-flow.svg", mode = "644" },
]

[package.metadata.bundle]
name = "Read Flow"
identifier = "io.github.read-flow"
icon = ["resources/icons/hicolor/scalable/apps/icon.svg"]
version = "0.1.1"
copyright = "Copyright (c) 2024 Peterpaul Klein Haneveld"
category = "public.app-category.productivity"
short_description = "Manage Documents Across Multiple Machines"
osx_minimum_system_version = "10.15"

[features]
# Embed the built PWA into the binary so `read-flow --headless` also serves the
# web UI at the same origin. Requires `just pwa-build` first; enabled for
# packaging/release builds, off for plain dev builds.
embed-pwa = ["read-flow-core/embed-pwa"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
clap = { workspace = true, features = ["derive"] }
cosmic-text.workspace = true
derive_more = { workspace = true, features = ["as_ref", "deref", "from"] }
futures.workspace = true
futures-util.workspace = true
i18n-embed = { workspace = true, features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl.workspace = true
image = { workspace = true, features = ["png", "jpeg", "gif", "webp"] }
indexmap.workspace = true
mupdf.workspace = true
open.workspace = true
rand = { workspace = true, features = ["std", "sys_rng"] }
regex = { workspace = true, features = ["std", "unicode"] }
rfd.workspace = true
rust-embed.workspace = true
serde = { workspace = true, features = ["derive"] }
strum = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["std", "fmt", "json", "env-filter", "ansi"] }
serde_json.workspace = true
time = { workspace = true, features = ["formatting", "macros", "std"] }
url.workspace = true

epub = { path = "../epub" }
provider = { path = "../provider" }
read-flow-core = { path = "../core", default-features = false, features = ["server"] }
read-flow-widgets = { path = "../widgets" }

[dependencies.libcosmic]
workspace = true
# See https://github.com/pop-os/libcosmic/blob/master/Cargo.toml for available features.
features = [
    # Accessibility support
    "a11y",
    # About widget for the app
    "about",
    # Support creating additional application windows.
    "multi-window",
    # On app startup, focuses an existing instance if the app is already open
    "single-instance",
    # Uses tokio as the executor for the runtime
    "tokio",
    # Windowing support for X11, Windows, Mac, & Redox
    "winit",
    # GPU-accelerated rendering
    "wgpu",
]

[target.'cfg(target_os = "linux")'.dependencies.libcosmic]
workspace = true
features = [
    # Uses cosmic-settings-daemon to watch for config file changes (D-Bus, Linux only)
    "dbus-config",
    # Add Wayland support to winit (Linux only)
    "wayland",
]

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }

[dev-dependencies]
assert4rs.workspace = true
cosmic-golden.workspace = true
cucumber.workspace = true
read-flow-core = { path = "../core", features = ["server", "test-support"] }
reqwest = { workspace = true, features = ["json", "multipart"] }
rstest.workspace = true
serde_json.workspace = true
tempfile.workspace = true
zip.workspace = true
