[package]
name = "epub"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
quick-xml = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
assert4rs = { workspace = true }
