[package]
name = "epub"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license = "MIT"

[dependencies]
base64 = { workspace = true }
html5ever = { workspace = true }
image = { workspace = true }
regex = { workspace = true, features = ["std", "perf", "unicode-perl"] }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tracing = { workspace = true }
quick-xml = { workspace = true }
zip = { workspace = true, features = ["deflate"] }

[dev-dependencies]
rstest = { workspace = true }
assert4rs = { workspace = true }
