[package]
name = "provider"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license = "MIT"

[dependencies]
tokio = { workspace = true, features = ["rt", "test-util", "macros"] }
tracing.workspace = true
trait-variant.workspace = true

[dev-dependencies]
assert4rs.workspace = true
