[package]
name = "read-flow-settings"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "read-flow-settings"
path = "src/main.rs"

[dependencies]
# Standalone — NOT workspace — to avoid conflict with libcosmic's patched iced fork.
iced = { version = "0.14.0", features = ["tokio"] }

read-flow-core = { path = "../core", default-features = false }

clap               = { workspace = true, features = ["derive"] }
rfd                = { workspace = true }
tokio              = { workspace = true, features = ["rt-multi-thread", "macros"] }
serde              = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }
